--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,5 +4,7 @@
     <string name="app_name">XYX</string>
     <string name="dummy_button">Dummy Button</string>
     <string name="dummy_content">DUMMY\nCONTENT</string>
+    
+    <string name="astros">白羊座;金牛座;双子座;巨蟹座;狮子座;处女座;天平座;天蝎座;射手座;魔蝎座;水瓶座;双鱼座</string>
 
 </resources>
