--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,7 +4,8 @@
     <string name="app_name">XYX</string>
     <string name="dummy_button">Dummy Button</string>
     <string name="dummy_content">DUMMY\nCONTENT</string>
-    <string name="astros">白羊座;金牛座;双子座;巨蟹座;狮子座;处女座;天平座;天蝎座;射手座;魔蝎座;水瓶座;双鱼座</string>
+    <string name="astros1">白羊座;金牛座;双子座;巨蟹座;狮子座;处女座;天平座;天蝎座;射手座;魔蝎座;水瓶座;双鱼座</string>
+    <string name="astros">Aries;Taurus;Gemini;Cancer;Leo;Virgo;Libra;Scorpio;Sagittarius;Capricorn;Aquarius;Pisces</string>
     <string name="title_activity_astro_detail">AstroDetailActivity</string>
     <string name="title_activity_astro_details">AstroDetailsActivity</string>
     <string name="action_settings">Settings</string>
