add apis for tommorow/week/month/year

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -11,5 +11,6 @@
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
     <string name="no_connection">没有网络</string>
+    <string name="title_activity_astro_details_more">AstroDetailsMoreActivity</string>
 
 </resources>
