--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -12,5 +12,6 @@
     <string name="hello_world">Hello world!</string>
     <string name="no_connection">没有网络</string>
     <string name="title_activity_astro_details_more">AstroDetailsMoreActivity</string>
+    <string name="astroViewPager">astro viewpager</string>
 
 </resources>
