--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -4,4 +4,39 @@
     <string name="app_name">幸运星</string>
     <string name="quitMessage">再点击返回键退出幸运星</string>
     <string name="no_connection">没有网络连接！</string>
+
+    <!-- details -->
+    <string name="total_fortune">综合运势</string>
+    <string name="love_fortune">爱情运势</string>
+    <string name="work">工作状况</string>
+    <string name="finance">理财投资</string>
+    <string name="health">健康指数</string>
+    <string name="negotiate">商谈指数</string>
+    <string name="lucky_color">幸运颜色</string>
+    <string name="lucky_number">幸运数字</string>
+    <string name="speed_dating">速配星座</string>
+    <string name="outline">综合概述</string>
+
+    <!-- month -->
+    <string name="total_fortune_2">整体运势</string>
+    <string name="health_2">健康运势</string>
+    <string name="work_2">工作学业运</string>
+    <string name="release">解压方式</string>
+    <string name="tips">开运小诀窍</string>
+    <string name="lucky_stuff">幸运物</string>
+    <string name="finance_2">投资理财运</string>
+
+    <!-- more -->
+    <string name="not_alone">有对象:</string>
+    <string name="alone">无对象:</string>
+    <string name="sex">性欲指数</string>
+    <string name="good_days">红心日</string>
+    <string name="bad_days">黑梅日</string>
+    <string name="tips_2">小提示</string>
+
+    <!-- year -->
+    <string name="study">功课学业</string>
+    <string name="work_3">工作职场</string>
+    <string name="finance_3">金钱理财</string>
+    <string name="love_fortune_2">恋爱婚姻</string>
 </resources>
